<resources>
    <string name="app_name">Pharma</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="logo">logo</string>
    <string name="enterdata">please enter your data correctly to receive the best care</string>
    <string name="twitter">twitter</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_checkout">Shopping cart</string>
    <string name="menu_profile">Profile</string>

    <string name="search">Search</string>
    <string name="deals">Deals</string>
    <string name="history">History</string>
    <string name="contact_us">Contact us</string>
    <string name="report_bug">Report bug</string>
    <string name="drug_name">Drug Name</string>
    <string name="price">999</string>
    <string name="back">back</string>
    <string name="add_to_the_cart">add</string>
    <string name="catagory">Category</string>
    <string name="price_no">Price:999</string>
    <string name="total_price">Total :</string>
    <string name="continue_checkout">continue Checkout</string>
    <string name="continue_shopiping">continue shopiping</string>
    <string name="itemimage">itemImage</string>
    <string name="total_priceSt">Total price :</string>
    <string name="_999">9999</string>
    <string name="logout">Logout</string>
    <string name="title_activity_cart_final">Cart Items</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="skip">Skip</string>
    <string name="don_t_worry">don\'t worry your info will be our secret</string>
    <string name="wellcomeBack">Wellcome back, please enter your data carefully</string>
    <string name="userenrty">userEnrty</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="order_status">Order Status : </string>
    <string name="view_details">Details</string>
    <string name="address">Address</string>
    <string name="delivary_name">delivary Name : @@@@@@@@@</string>
    <string name="seller_name">Seller Name : @@@@@@@@@</string>
    <string name="total_pride_99999_l_e">Total Pride : 99999 L.E</string>
    <string name="cancel">cancel</string>
    <string name="unit_count">unit count</string>
    <string name="arabic_name">Arabic Name : </string>
    <string name="available_quantity">Available Quantity : </string>
    <string name="category">Category : </string>
    <string name="english_name">English Name : </string>
    <string name="science_name">Science Name : </string>
    <string name="unit_price">Unit Price : </string>
    <string name="company">Company : </string>
    <string name="not_available">not Available</string>
    <string name="more_info">More info</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="add_photo">add Photo</string>
    <string name="user_gender">User gender : </string>
    <string name="user_age">User Age :</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_old_password">Enter Old Password</string>

    <string name="title_activity_order_details">orderDetails</string>
    <string name="last_update">last Update :</string>
    <string name="delivery"> Delivery :</string>
    <string name="seller">Seller : </string>
    <string name="confirm">confirm</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="leaving">leaving it empty means no changes</string>

</resources>
