<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/historyItem"
    android:layout_marginTop="7dp"

    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="1.5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/status"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/order_status"
            android:src="@color/colorAccent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginStart="5dp"
                android:text="Time:99/99/9999 99:99:A.M" />

            <TextView
                android:id="@+id/totalOrder"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_pride_99999_l_e" />
            <TextView
                android:id="@+id/seller"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller_name" />


            <TextView
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginStart="5dp"
                android:text="@string/delivary_name" />

        </LinearLayout>
        <androidx.cardview.widget.CardView

            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp"
            app:cardElevation="3dp">

            <Button
                android:id="@+id/OrderDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/backgroundbtn"
                android:text="@string/view_details"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.cardview.widget.CardView>