<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activates.ProfileActivity"
    tools:showIn="@layout/app_bar_profile">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgrounds" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userPhotoProfile"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/backgrounds" />
                <!--

                                <TextView
                                    android:id="@+id/addPhoto"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/add_photo"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorAccent"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />
                -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/full_name"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/full_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/UserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/user_gender"
                        android:textColor="@android:color/black" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/maleRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textColor="@color/colorAccent" />

                        <RadioButton
                            android:id="@+id/femaleRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textColor="@color/colorAccent" />
                    </RadioGroup>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/user_age"
                        android:textColor="@android:color/black" />

                    <NumberPicker
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp">

                    </NumberPicker>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/UserPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leaving"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="visible" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        style="@style/RippleStyleAccent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/backgroundbtn"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:text="@string/update_profile"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </com.balysv.materialripple.MaterialRippleLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>