<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activates.CartActivity"
    tools:showIn="@layout/app_bar_cart_activity_final">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/total_priceSt"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalOrder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_999"
                android:textAlignment="textEnd"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp">
<com.balysv.materialripple.MaterialRippleLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/RippleStylewhight">
                <Button
                    android:id="@+id/checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroundbtn"
                    android:text="@string/continue_checkout"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

</com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/continue_shopiping"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>