<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="7dp"

        android:padding="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="15"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/drugphoto"
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/itemimage"
                        android:src="@drawable/ic_medicine" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/drugname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/drug_name"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/drugCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/catagory"
                            android:textColor="@color/colorAccent"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/drugprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textSize="20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button

                            android:id="@+id/showDialog"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/backgroundbtn"
                            android:drawableBottom="@drawable/ic_add_shopping"
                            android:padding="10dp"
                            android:textAlignment="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/availableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:text="@string/not_available"
                android:textColor="@color/red"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>